samples/_failures_safe/1761361987_7ff8fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_359a8545.c: In function ‘main’:
./samples/SAFE/__tmp_359a8545.c:171:15: error: expected ‘;’ at end of input
  171 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_359a8545.c:171:9: error: expected declaration or statement at end of input
  171 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_359a8545.c:171:9: error: expected declaration or statement at end of input
